--- a/TestTask/TestTask.csproj
+++ b/TestTask/TestTask.csproj
@@ -8,7 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Npgsql" Version="10.0.0-rc.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.0" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.0" />
     </ItemGroup>
 
 </Project>
